# DigitLLComms.jl

./: .gitignore  Project.toml  README.md
examples/: lowlevelapi_example.c  standing_controller.jl  test_connection.jl  test_getters.jl  test_ros_observation.jl  test_send_cmd.jl  test_send_get.jl
src/: DigitLLComms.jl  constants.jl  eg.jl  get.jl  initialize.jl  set.jl  types.jl  utils.jl
src/controllers/: standing_controller.jl  standing_controller2.jl
src/cpp_src/: CMakeLists.txt  lowlevelapi.c  lowlevelapi.h  lowlevelapi_stand.toml  use_dll.jl
src/examples/: test_get_observation.jl  test_getters.jl  test_send_command.jl
src/sim/: digit_real.sh
src/sim/ws/src/digit_llapi/src/: Digit_Llapi.cpp  main_srv_llapi.cpp
src/sim/ws/src/digit_msgs/msg/: Digit_Observation.msg
src/sim/ws/src/digit_msgs/srv/: Digit_Commands_srv.srv  Digit_Observation_srv.srv
test/: runtests.jl
